--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="logo">MyStore</div>
   <input type="text" placeholder="Search products..." class="search" />
   <div class="nav-links">
-    <a href="../login.html">Login</a>
+    <a href="login.html">Login</a>
     <a href="">Cart 🛒</a>
   </div>
 </nav>
@@ -47,5 +47,6 @@
 
 </body>
 </html>
+
 
 
