--- a/signup.html
+++ b/signup.html
@@ -15,15 +15,27 @@
   <input type="password" placeholder="Password" />
 
   <button>Sign Up</button> -->
-  <input type="email" placeholder="Email" id="email" />
+
+
+  
+  <!-- <input type="email" placeholder="Email" id="email" />
 <button onclick="sendOtp()">Send OTP</button>
 
 <input type="text" placeholder="Enter OTP" id="otp" disabled />
 <button onclick="verifyOtp()">Verify OTP</button>
 
 <input type="password" placeholder="Password" id="password" disabled />
-<button onclick="signup()">Create Account</button>
+<button onclick="signup()">Create Account</button> -->
 
+
+  <input type="text" id="name" placeholder="Name" />
+<input type="email" id="email" placeholder="Email" />
+  <button onclick="sendOtp()">Send OTP</button>
+<input type="text" id="otp" placeholder="Enter OTP" disabled />
+  <button onclick="verifyOtp()">Verify OTP</button>
+<input type="password" id="password" placeholder="Password" disabled />
+<button onclick="signup()">Create Account</button> -->
+  
   <p>Already have an account? <a href="login.html">Login</a></p>
 </div>
 
@@ -131,5 +143,6 @@ async function signup() {
   
 </body>
 </html>
+
 
 
