--- a/signup.html
+++ b/signup.html
@@ -154,11 +154,17 @@ async function verifyOtp() {
     return;
   }
 
-  const res = await fetch("/api/auth/signup", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ email, password })
-  });
+  // const res = await fetch("/api/auth/signup", {
+  //   method: "POST",
+  //   headers: { "Content-Type": "application/json" },
+  //   body: JSON.stringify({ email, password })
+  // });
+  fetch("https://my-store-w94t.onrender.com/api/auth/signup", {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify({ email, password })
+});
+
 
   const data = await res.json();
   alert(data.message);
@@ -170,6 +176,7 @@ async function verifyOtp() {
   
 </body>
 </html>
+
 
 
 
