--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
   <input type="email" placeholder="Email" />
   <input type="password" placeholder="Password" />
 
-  <button>Login</button>
+  <button type="submit" onclick="login()">Login</button>
 
   <p>Don’t have an account? <a href="signup.html">Sign up</a></p>
 </div>
@@ -60,4 +60,5 @@ async function login() {
   </script>
 </body>
 </html>
+
 
