--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="nav-links">
     <a href="login.html">Login</a>
     <a href="">Cart 🛒</a>
+    <button id="profileBtn" style="display:none;">Profile</button>
   </div>
 </nav>
 
@@ -45,8 +46,25 @@
   <p>© 2026 MyStore. All rights reserved.</p>
 </footer>
 
+
+  <script>
+    
+const token = localStorage.getItem("token");
+
+if (token) {
+  document.getElementById("profileBtn").style.display = "block";
+}
+
+document.getElementById("profileBtn").addEventListener("click", () => {
+  window.location.href = "/dashboard.html";
+});
+
+
+    
+  </script>
 </body>
 </html>
+
 
 
 
