--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ if (token) {
 }
 
 document.getElementById("profileBtn").addEventListener("click", () => {
-  window.location.href = "/dashboard.html";
+  window.location.href = "dashboard.html";
 });
 
 
@@ -64,6 +64,7 @@ document.getElementById("profileBtn").addEventListener("click", () => {
   </script>
 </body>
 </html>
+
 
 
 
