--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,7 @@ fetch("https://my-store-w94t.onrender.com/api/dashboard", {
 
   document.getElementById("logoutBtn").addEventListener("click", () => {
   localStorage.removeItem("token");
-  window.location.href = "/login.html";
+  window.location.href = "login.html";
 });
 
 
