--- a/dashboard.html
+++ b/dashboard.html
@@ -21,26 +21,51 @@
 </div>
 
 <script>
-    const token = localStorage.getItem("token");
+const token = localStorage.getItem("token");
 
 if (!token) {
-  window.location.href = "login.html";
+  window.location.href = "/login.html";
 }
 
-fetch("https://my-store-w94t.onrender.com/api/dashboard", {
+fetch("http://localhost:5000/api/dashboard", {
   headers: {
     Authorization: "Bearer " + token
   }
 })
 .then(res => res.json())
-.then(data => {
-  document.getElementById("email").innerText = "Email: " + data.email;
+.then(user => {
+  document.getElementById("name").innerText = user.name || "No Name";
+  document.getElementById("email").innerText = user.email;
+  document.getElementById("profilePhoto").src =
+    user.photo || "https://via.placeholder.com/90";
 });
 
-  document.getElementById("logoutBtn").addEventListener("click", () => {
+// Update profile
+document.getElementById("profileForm").addEventListener("submit", async e => {
+  e.preventDefault();
+
+  const formData = new FormData();
+  formData.append("name", document.getElementById("newName").value);
+  formData.append("photo", document.getElementById("photo").files[0]);
+
+  const res = await fetch("https://my-store-w94t.onrender.com/api/profile", {
+    method: "PUT",
+    headers: {
+      Authorization: "Bearer " + token
+    },
+    body: formData
+  });
+
+  const updatedUser = await res.json();
+  location.reload();
+});
+
+// Logout
+document.getElementById("logoutBtn").onclick = () => {
   localStorage.removeItem("token");
   window.location.href = "login.html";
-});
+};
+
 
 </script>
 </body>
