--- a/dashboard.html
+++ b/dashboard.html
@@ -27,7 +27,7 @@ if (!token) {
   window.location.href = "/login.html";
 }
 
-fetch("http://localhost:5000/api/dashboard", {
+fetch("https://my-store-w94t.onrender.com/api/dashboard", {
   headers: {
     Authorization: "Bearer " + token
   }
