--- a/admin-login.html
+++ b/admin-login.html
@@ -26,7 +26,7 @@ function login() {
   .then(data => {
     if (data.token) {
       localStorage.setItem("adminToken", data.token);
-      window.location.href = "/admin-dashboard.html";
+      window.location.href = "admin-dashboard.html";
     } else {
       alert(data.message);
     }
