--- a/login.html
+++ b/login.html
@@ -48,10 +48,18 @@ async function login() {
   alert("Login successful");
   window.location.href = "index.html";
 }
+
+  document.addEventListener("keydown", e => {
+  if (e.ctrlKey && e.shiftKey && e.key === "A") {
+    window.location.href = "admin-login.html";
+  }
+});
+
 </script>
 
 </body>
 </html>
+
 
 
 
