--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@ async function login() {
 }
 
   document.addEventListener("keydown", e => {
-  if (e.ctrlKey && e.shiftKey && e.key === "A") {
+  if (e.ctrlKey && e.shiftKey && e.key === "/") {
     window.location.href = "admin-login.html";
   }
 });
@@ -59,6 +59,7 @@ async function login() {
 
 </body>
 </html>
+
 
 
 
