--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
   
  document.addEventListener("keydown", e => {
   if (e.ctrlKey && e.shiftKey && e.key === "A") {
-    window.location.href = "/admin-login.html";
+    window.location.href = "admin-login.html";
   }
 });
 
@@ -63,6 +63,7 @@ async function login() {
 
 </body>
 </html>
+
 
 
 
