--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin</title>
+  <meta charset="UTF-8" />
+  <title>Admin Dashboard</title>
+  <link rel="stylesheet" href="admin.css" />
 </head>
 <body>
-  <h2>Admin Panel</h2>
-<p id="msg"></p>
-<button onclick="logout()">Logout</button>
 
-<script>
-const token = localStorage.getItem("adminToken");
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <h2>ADMIN</h2>
+    <ul>
+      <li onclick="showSection('dashboard')">Dashboard</li>
+      <li onclick="showSection('users')">Users</li>
+      <li onclick="showSection('products')">Products</li>
+      <li onclick="logout()">Logout</li>
+    </ul>
+  </div>
 
-if (!token) {
-  window.location.href = "admin-login.html";
-}
+  <!-- Main Content -->
+  <div class="main">
+    <div id="dashboard" class="section active">
+      <h1>Dashboard</h1>
+      <p>Welcome, Admin</p>
+    </div>
 
-fetch("http://localhost:5000/api/admin/dashboard", {
-  headers: {
-    Authorization: "Bearer " + token
-  }
-})
-.then(res => res.json())
-.then(data => {
-  document.getElementById("msg").innerText = data.message;
-});
+    <div id="users" class="section">
+      <h1>Users</h1>
+      <p>Users list will appear here</p>
+    </div>
 
-function logout() {
-  localStorage.removeItem("adminToken");
-  window.location.href = "admin-login.html";
-}
-</script>
+    <div id="products" class="section">
+      <h1>Products</h1>
+      <p>Products management coming soon</p>
+    </div>
+  </div>
 
+  <script></script>
 </body>
 </html>
