--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1,48 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Admin Dashboard</title>
-  <link rel="stylesheet" href="admin.css" />
+  <meta charset="UTF-8">
+  <title>Admin Panel</title>
+  <link rel="stylesheet" href="admin.css">
 </head>
 <body>
 
-  <!-- Sidebar -->
-  <div class="sidebar">
-    <h2>ADMIN</h2>
-    <ul>
-      <li onclick="showSection('dashboard')">Dashboard</li>
-      <li onclick="showSection('users')">Users</li>
-      <li onclick="showSection('products')">Products</li>
-      <li onclick="logout()">Logout</li>
-    </ul>
-  </div>
+<!-- Sidebar -->
+<aside class="sidebar">
+  <h2>ADMIN</h2>
+  <nav>
+    <button onclick="openPage('overview')">Overview</button>
+    <button onclick="openPage('users')">Users</button>
+    <button onclick="openPage('products')">Products</button>
+    <button onclick="openPage('orders')">Orders</button>
+    <button onclick="openPage('categories')">Categories</button>
+    <button onclick="openPage('analytics')">Analytics</button>
+    <button onclick="openPage('settings')">Settings</button>
+    <button class="logout" onclick="logout()">Logout</button>
+  </nav>
+</aside>
 
-  <!-- Main Content -->
-  <div class="main">
-    <div id="dashboard" class="section active">
-      <h1>Dashboard</h1>
-      <p>Welcome, Admin</p>
+<!-- Main -->
+<main class="main">
+
+  <!-- OVERVIEW -->
+  <section id="overview" class="page active">
+    <h1>Dashboard</h1>
+    <div class="cards">
+      <div class="card">Users<br><strong>0</strong></div>
+      <div class="card">Products<br><strong>0</strong></div>
+      <div class="card">Orders<br><strong>0</strong></div>
+      <div class="card">Revenue<br><strong>₹0</strong></div>
     </div>
+  </section>
 
-    <div id="users" class="section">
-      <h1>Users</h1>
-      <p>Users list will appear here</p>
-    </div>
+  <!-- USERS -->
+  <section id="users" class="page">
+    <h1>Users</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Email</th>
+          <th>Status</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>user@email.com</td>
+          <td>Active</td>
+          <td>
+            <button>Block</button>
+            <button>Delete</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
 
-    <div id="products" class="section">
-      <h1>Products</h1>
-      <p>Products management coming soon</p>
-    </div>
-  </div>
+  <!-- PRODUCTS -->
+  <section id="products" class="page">
+    <h1>Products</h1>
+    <button>Add Product</button>
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Stock</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </section>
 
-  <script>
-    function showSection(id) {
-  document.querySelectorAll(".section").forEach(sec => {
-    sec.classList.remove("active");
+  <!-- ORDERS -->
+  <section id="orders" class="page">
+    <h1>Orders</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Order ID</th>
+          <th>User</th>
+          <th>Status</th>
+          <th>Update</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </section>
+
+  <!-- CATEGORIES -->
+  <section id="categories" class="page">
+    <h1>Categories</h1>
+    <input placeholder="New category">
+    <button>Add</button>
+    <ul class="list"></ul>
+  </section>
+
+  <!-- ANALYTICS -->
+  <section id="analytics" class="page">
+    <h1>Analytics</h1>
+    <p>Graphs & charts will be added later</p>
+  </section>
+
+  <!-- SETTINGS -->
+  <section id="settings" class="page">
+    <h1>Settings</h1>
+    <button>Maintenance Mode</button>
+    <button>Manage Admins</button>
+  </section>
+
+</main>
+
+<script>
+  function openPage(pageId) {
+  document.querySelectorAll(".page").forEach(p => {
+    p.classList.remove("active");
   });
-
-  document.getElementById(id).classList.add("active");
+  document.getElementById(pageId).classList.add("active");
 }
 
 function logout() {
@@ -51,11 +130,10 @@ function logout() {
 }
 
 /* Protect dashboard */
-const token = localStorage.getItem("adminToken");
-if (!token) {
+if (!localStorage.getItem("adminToken")) {
   window.location.href = "admin-login.html";
 }
 
-  </script>
+</script>
 </body>
 </html>
