--- a/index.html
+++ b/index.html
@@ -55,6 +55,26 @@ if (token) {
   document.getElementById("profileBtn").style.display = "block";
 }
 
+async function apiFetch(url, options = {}) {
+  const res = await fetch(url, {
+    ...options,
+    headers: {
+      ...(options.headers || {}),
+      Authorization: `Bearer ${token}`
+    }
+  });
+
+  if (res.status === 403) {
+    alert("Your account has been blocked");
+    localStorage.removeItem("token");
+    window.location.href = "login.html";
+    return;
+  }
+
+  return res.json();
+}
+
+
 document.getElementById("profileBtn").addEventListener("click", () => {
   window.location.href = "dashboard.html";
 });
@@ -64,6 +84,7 @@ document.getElementById("profileBtn").addEventListener("click", () => {
   </script>
 </body>
 </html>
+
 
 
 
