--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <p>© 2026 MyStore. All rights reserved.</p>
 </footer>
 
-
+<script src="api.js"></script>
   <script>
     
 const token = localStorage.getItem("token");
@@ -54,26 +54,6 @@ const token = localStorage.getItem("token");
 if (token) {
   document.getElementById("profileBtn").style.display = "block";
 }
-
-async function apiFetch(url, options = {}) {
-  const res = await fetch(url, {
-    ...options,
-    headers: {
-      ...(options.headers || {}),
-      Authorization: `Bearer ${token}`
-    }
-  });
-
-  if (res.status === 403) {
-    alert("Your account has been blocked");
-    localStorage.removeItem("token");
-    window.location.href = "login.html";
-    return;
-  }
-
-  return res.json();
-}
-
 
 document.getElementById("profileBtn").addEventListener("click", () => {
   window.location.href = "dashboard.html";
@@ -84,6 +64,7 @@ document.getElementById("profileBtn").addEventListener("click", () => {
   </script>
 </body>
 </html>
+
 
 
 
