--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
 <p id="email"></p>
 <button id="logoutBtn">Logout</button>
   
-<script src="api.js"></script>
+<!-- <script src="api.js"></script> -->
 <script>
    const token = localStorage.getItem("token");
 
