--- a/dashboard.html
+++ b/dashboard.html
@@ -11,23 +11,40 @@
   
 <!-- <script src="api.js"></script> -->
 <script>
-   const token = localStorage.getItem("token");
+//    const token = localStorage.getItem("token");
 
-if (!token) {
-  window.location.href = "login.html";
-}
-  fetch("https://my-store-w94t.onrender.com/api/dashboard", {
-  headers: {
-    Authorization: "Bearer " + token
+// if (!token) {
+//   window.location.href = "login.html";
+// }
+//   fetch("https://my-store-w94t.onrender.com/api/dashboard", {
+//   headers: {
+//     Authorization: "Bearer " + token
+//   }
+// })
+// .then(res => res.json())
+//   .then(data => {
+//   document.getElementById("email").innerText = "Email: " + data.email;
+// });
+// document.getElementById("logoutBtn").addEventListener("click", () => {
+//   localStorage.removeItem("token");
+//   window.location.href = "login.html";
+//   });
+
+  const token = localStorage.getItem("token");
+
+  if (!token) {
+    window.location.href = "login.html";
   }
-})
-.then(res => res.json())
-  .then(data => {
-  document.getElementById("email").innerText = "Email: " + data.email;
-});
-document.getElementById("logoutBtn").addEventListener("click", () => {
-  localStorage.removeItem("token");
-  window.location.href = "login.html";
+
+  apiFetch("https://my-store-w94t.onrender.com/api/dashboard")
+    .then(res => res.json())
+    .then(data => {
+    document.getElementById("email").innerText = "Email: " + data.email;
+  });
+
+  document.getElementById("logoutBtn").addEventListener("click", () => {
+    localStorage.removeItem("token");
+    window.location.href = "login.html";
   });
   </script>
 
